Bugs fixed in 0.3.0:
* Fixed petsc support, require petsc2.2 now (CP)
* Fixed testsuite/test_linearsolvers (CP)

New in 0.3.0:
* Added 1D model solver for blood flow simulation (VM)
* Added vector norms in lifealg/vectorNorms.{h,c}pp (CP)
* Added reaction term in masstransport (MP)
* Embedded library and testsuite code into the LifeV namespace (CP)
* New unit testing framework : we use AutoTest(from autoconf) (CP)
  ported all tests to this framework
  ported all tests to GetPot


Bugs fixed in 0.2.0-pre1:
* Bug #23: "fixed wrong assembly in elemOper.cpp in stiff_sd" (MP)
* Bug #27: "No rule to make target `admin/acinclude.m4.in'" (CP)
* Bug #19: "Missing mesh (carotid.m++) in test_ns_sstress" (AV)

Tasks completed in 0.2.0-pre1:
* Task #104: "Generate new directory layout" (CP)
* Task #105: "move files into proper new directories" (CP & LF)
* Task #109: "Convection Reaction Diffusion solver implementation" (MP)

New in 0.2.0-pre1:
* Added area debugging see LDebug class (CP)
* Added a petsc interface in lifealfg, see SolverPETSC class (CP)
* Changed interface to vecUnknown classes: no need to use .vec() anymore
  fixed speed issues at the same time (CP)
* Updated libtool scripts (CP)
* Added configure check for parmetis (at least 3.1) (CP)
* Added configure check for petsc (at least 2.1.6) (CP)
* Added configure check for umfpack (at least 4.3) (CP)
* Added configure check for mpi (CP)
* Updated api documentation generation(CP)


Bugs fixed in 0.1.0pre5:
* Bug #2 : documentation update to lifev-dev manual
* Bug #17: fixed segfault in medium size NavierStokes problem
* Bug #20: fixed data files in testsuite to reflect the tests location

New in 0.1.0pre5:
* added --enable-debug and --enable-opt to configure script
* LifeV is finally copyrighted properly
* LifeV libraries are now LGPL. Header and implementation have 
  been updated accordingly.
* LifeV testsuite is now GPL. Header and implementation have 
  been updated accordingly.


Bugs fixed in 0.1.0pre4: